# Face-Invaders-Game

./: CHRISLEARNINGHOWTOGIT.md  FasterShooting.cpp  FasterShooting.h  GeneralShooting.cpp  GeneralShooting.h  PowerUps.cpp  PowerUps.h  README.md  alien.cpp  alien.h  bullet.cpp  bullet.h  hitbox.cpp  hitbox.h  test.txt
320_TSL/: .cproject  .project
320_TSL/src/: player.cpp
Face Invaders/: Face Invaders.sln  ring.cpp  ring.h
Face Invaders/Debug/: Face Invaders.ilk  Test SDL.ilk
Face Invaders/Face Invaders/: Face Invaders.vcxproj  Face Invaders.vcxproj.filters  alien.h  faceinvaders.cpp  faceinvaders.h  profshead.cpp  profshead.h
Face Invaders/Face Invaders/Debug/: vc142.idb
Face Invaders/Test SDL/: 07_texture_loading_and_rendering.cpp  09_the_viewport.cpp  10_color_keying.cpp  13_alpha_blending.cpp  14_animated_sprites_and_vsync.cpp  Test SDL.vcxproj  Test SDL.vcxproj.filters
Face Invaders/Test SDL/Debug/: vc142.idb
Space Invaders/: CMakeLists.txt
Space Invaders/Space Invaders/: CMakeLists.txt  FaceInvaders.h  hitbox.h  player.h  profshead.cpp
schindlerslist.git/: config  packed-refs
schindlerslist.git/objects/pack/: pack-162c289e119417150dc2c0fb305bb15a1a587f7a.idx  pack-162c289e119417150dc2c0fb305bb15a1a587f7a.pack
sdl-app/: Makefile  README.md  display-mcleod.cpp  hello-world.cpp
sfml320-project/: Main.cpp  sfml320-project.sln  sfml320-project.vcxproj
sfml320-project/Classes/: bullet.cpp  bullet.h
sfml320-project/Debug/: main.obj.enc  sfml320-project.ilk  vc142.idb
sfml320-project/Debug/Classes/: bullet.h
(+27 files in other folders)
